# MLOps_course

./: Makefile  README.md  dvc.yaml  mypy.ini  params.yaml  pyproject.toml  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: training_example.ipynb
notebooks/tmp_tok/: vocab.txt
scripts/: format.sh  lint.sh
scripts/stage_scripts/: collect_new_tokens.py  expand_model_vocab.py  extract_text.py  finetune.py  load_raw.py  make_splits.py  sentenize.py
service/: Dockerfile  docker-compose.yaml  main.py  service_requirements.txt
service/pipeline/: __init__.py  group_tasks.py  task_extractor.py  word_metadata.py
src/: constants.py
src/data/: load_dataset.py
src/data/parsing/: __init__.py  clean_text.py  process_paper.py
src/models/finetune_mlm/: collect_extra_tokens.py  expand_vocab.py  finetune.py
src/pipeline/: gaps_extractor.py  group_tasks.py  word_metadata.py
